# module-found

./: LICENSE  README.md  module_found.pth  pyproject.toml
module_found/: __init__.py  import_hook.py  lazy_object.py
