[tool.poetry]
name = "module-found"
version = "0.2.1.dev1"
description = "Automatically create modules instead of failing with ModuleNotFound"
authors = ["Liad Oz <liadozil@gmail.com>"]
readme = "README.md"
packages = [
    { include = "module_found" },
    { include = "module_found.pth" },
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
repository = "https://github.com/LiadOz/module-found"

[tool.poetry.dependencies]
python = "^3.8"
openai = "^1.13.3"


[tool.poetry.group.dev.dependencies]
ipython = "^8.0"
debugpy = "^1.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-module-docstring,missing-function-docstring,missing-class-docstring"
